Updaitng our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an aspiring software developer!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Atlanta,GA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love video games, animals, and I've recently in the past year found a love for DnD!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Developer or Web Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Durham, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've always wanted to be in the tech field. Growing up I always thought I wanted to do custom PC building as I had a love and passion for it and still do to this day building PC's for friends and family. But I now find myself wanting to do and learn more and I think that web development is a creative and fullfilling career that I feel will be enjoyable to me.</p>
     </section>
 
     <footer id="footer">
